syntax="proto3";

message ConfirmPhone {
  string locale = 1;
}
