syntax="proto3";

message ReferRegister {
  string action = 1;
}
