syntax="proto3";

message ReferUse {
  string locale = 1;
}
