syntax="proto3";

message SetRole {
  string role = 1;
  string locale = 2;
}
