syntax="proto3";

message TokenDestroy {
    string tokenId = 1;
    string locale = 2;
}
