syntax="proto3";

message TokenExtend {
  string tokenId = 1;
  string locale = 2;
}
