syntax="proto3";

message UserDestroy {
  string action = 1;
}
