syntax="proto3";

message UserGet {
  string action = 1;
}
