syntax="proto3";

message NotFound {
  string error = 1;
}
