syntax="proto3";

message ResetCreate {
  string error = 1;
}
