syntax="proto3";

message TokenCreate {
  string error = 1;
}
