syntax="proto3";

message TokenGet {
  string action = 1;
}
