syntax="proto3";

message UserCreateSocial {
  string action = 1;
}
