syntax="proto3";

message UserEdit {
  string action = 1;
}
