syntax="proto3";

message UserSetRole {
  string action = 1;
}
